<!--
  ~ Copyright (c) 2018 CoderLengary
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Todo</string>

    <!-- Login start -->
    <string name="login_title">Todo-List.</string>
    <string name="login_title_desc">Complete a plan every day</string>
    <string name="login_user_name_hint">Enter your name</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="login_re_password_hint">Enter your password again</string>
    <string name="login_btn_login">Sign in Now</string>
    <string name="login_btn_register">Join us</string>
    <string name="login_link_to_sign_up">Don\'t have a account? create one</string>
    <string name="login_link_to_sign_in">Already a member? Login</string>
    <string name="login_toggle_desc">Alter the visibility of password</string>
    <!-- Login end -->

    <!-- Main start -->
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <!-- Main end -->

    <!-- Home start -->
    <string name="home_todo">Todo</string>
    <string name="home_done">Done</string>
    <string name="home_complete_date">Complete date: </string>

    <string name="home_custom_alert_dialog_title_hint">Enter the title here</string>
    <string name="home_custom_alert_dialog_content_hint">Enter your content here</string>
    <string name="home_custom_alert_dialog_btn_sure">Sure</string>
    <string name="home_custom_alert_dialog_btn_update">Update</string>


    <string name="home_alert_dialog_title">Warning</string>
    <string name="home_alert_dialog_content">No network, could not load any data for you</string>
    <string name="home_alert_dialog_positive">Refresh</string>
    <string name="home_alert_dialog_negative">Close App</string>

    <string name="home_item_recycler_view_status_incomplete">Incomplete</string>
    <string name="home_item_recycler_view_status_complete">Complete</string>
    <string name="home_item_recycler_view_empty">Empty List</string>
    <string name="home_item_recycler_view_complete">complete</string>
    <string name="home_item_recycler_view_revert">revert</string>
    <string name="home_item_recycler_view_delete">delete</string>

    <!-- Home end -->

    <!-- Add to do start -->
    <string name="todo_types">Categories</string>
    <string name="todo_title">Title</string>
    <string name="todo_title_hint">Edit title here.</string>
    <string name="todo_description">Description</string>
    <string name="todo_description_hint">Edit description here.(Optional)</string>
    <string name="todo_time">Expected date</string>
    <string name="todo_time_hint">Expected date of completion.</string>
    <string name="todo_check">Check</string>
    <!-- Add to do end -->

    <!-- Settings start -->
    <string name="settings_user_info">User Info</string>
    <string name="settings_user_name">User Name</string>
    <string name="settings_about">About</string>
    <string name="settings_version">Version</string>
    <string name="settings_rate">Rate</string>
    <string name="settings_rate_desc">If you like this app, please do rate it.</string>
    <string name="settings_licenses">Licenses</string>
    <string name="settings_thanks">Thanks</string>
    <string name="settings_lizhaotailang">Li Zhao Tai Lang</string>
    <string name="settings_lizhaotailang_desc">Appreciate his help very much</string>
    <string name="settings_lizhaotailang_link">https://github.com/TonnyL</string>
    <string name="settings_hongyang">Hong Yang</string>
    <string name="settings_hongyang_desc">API provider</string>
    <string name="settings_hongyang_link">https://github.com/hongyangAndroid</string>
    <string name="settings_support">Support</string>
    <string name="settings_source_code">GitHub Source code</string>
    <string name="settings_source_code_link">https://github.com/CoderLengary/WanAndroidTodo</string>
    <string name="settings_send_advices">Send advices</string>
    <string name="settings_send_advices_desc">Help me improve this app</string>
    <string name="settings_mail_account">mailto:719952215@qq.com</string>
    <string name="settings_device_model">Device Version:</string>
    <string name="settings_mail_topic">WanAndroid Advices</string>
    <string name="settings_sdk_version">SDK Version:</string>
    <!-- Settings end -->

    <!-- TodoList type start -->
    <string name="type_love">Love</string>
    <string name="type_study">Study</string>
    <string name="type_work">Work</string>
    <string name="type_life">Life</string>
    <!-- TodoList type end -->

    <!-- Error start-->
    <string name="empty_text">There is nothing</string>
    <string name="error_user_name">UserName is not valid</string>
    <string name="error_password">Password is not valid</string>
    <string name="error_re_password">Not match</string>
    <string name="error_title">Title is not valid</string>
    <string name="error_no_browser_found">No browser found</string>
    <string name="error_no_mail_app">No email app found</string>
    <string name="error">Something wrong</string>
    <!-- Error end -->

    <!--Success start-->
    <string name="success">Success</string>
    <!--Success end-->

    <!--App Bar Menu start-->
    <string name="log_out">Log out</string>
    <!--App Bar Menu end-->

</resources>
