<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 CoderLengary
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_about">

        <Preference
            android:title="@string/settings_version"
            app:key="version"
            android:summary="%s"/>

        <Preference
            android:title="@string/settings_rate"
            app:key="rate"
            android:summary="@string/settings_rate_desc"/>

        <Preference
            android:title="@string/settings_licenses"
            app:key="licenses"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_thanks">
        <Preference
            android:title="@string/settings_lizhaotailang"
            app:key="lizhaotailang"
            android:summary="@string/settings_lizhaotailang_desc"/>
        <Preference
            android:title="@string/settings_hongyang"
            app:key="hongyang"
            android:summary="@string/settings_hongyang_desc"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_support">
        <Preference
            android:title="@string/settings_source_code"
            app:key="source_code"
            android:summary="@string/settings_source_code_link"/>
        <Preference
            android:title="@string/settings_send_advices"
            app:key="send_advice"
            android:summary="@string/settings_send_advices_desc"/>
    </PreferenceCategory>

</PreferenceScreen>