<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 CoderLengary
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_more"
        android:title="more"
        android:icon="@drawable/ic_toys_green_24dp"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/menu_love"
                android:enabled="true"
                android:icon="@drawable/ic_favorite_red_24dp"
                app:showAsAction="never"
                android:title="@string/type_love"/>

            <item android:id="@+id/menu_work"
                android:enabled="true"
                android:icon="@drawable/ic_work_brown_24dp"
                app:showAsAction="never"
                android:title="@string/type_work"/>

            <item android:id="@+id/menu_study"
                android:enabled="true"
                android:icon="@drawable/ic_book_blue_24dp"
                app:showAsAction="never"
                android:title="@string/type_study"/>

            <item android:id="@+id/menu_life"
                android:enabled="true"
                android:icon="@drawable/ic_brightness_4_yellow_24dp"
                app:showAsAction="never"
                android:title="@string/type_life"/>


        </menu>
    </item>

</menu>

