<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 CoderLengary
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:titleTextColor="@color/colorPrimaryText" />


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_title_black_24dp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin_half"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/todo_title_hint" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_description_black_24dp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin_half"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:hint="@string/todo_description_hint" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_margin_half"
            android:src="@drawable/ic_list_black_24dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioLove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_half"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:button="@null"
                android:drawablePadding="@dimen/activity_margin_half"
                android:drawableTop="@drawable/radio_love_bg"
                android:gravity="center"
                android:text="@string/type_love" />

            <RadioButton
                android:id="@+id/radioWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:button="@null"
                android:drawablePadding="@dimen/activity_margin_half"
                android:drawableTop="@drawable/radio_work_bg"
                android:gravity="center"
                android:text="@string/type_work" />

            <RadioButton
                android:id="@+id/radioLife"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:button="@null"
                android:drawablePadding="@dimen/activity_margin_half"
                android:drawableTop="@drawable/radio_life_bg"
                android:gravity="center"
                android:text="@string/type_life" />

            <RadioButton
                android:id="@+id/radioStudy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_margin_half"
                android:button="@null"
                android:drawablePadding="@dimen/activity_margin_half"
                android:drawableTop="@drawable/radio_study_bg"
                android:gravity="center"
                android:text="@string/type_study" />

        </RadioGroup>
    </LinearLayout>


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textTimePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:drawableLeft="@drawable/ic_today_black_24dp"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:drawableTint="@color/colorPrimaryText"
        android:lineSpacingExtra="@dimen/activity_margin_half"
        android:text="@string/todo_time"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp" />


</LinearLayout>